--- a/index.html
+++ b/index.html
@@ -4,6 +4,150 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+      body {
+        background: linear-gradient(135deg, #e65a5a 0%, #e9ecef 100%);
+      }
+      .navbar {
+        background-color: #a80000 !important;
+      }
+      .navbar-brand, .nav-link {
+        color: #fff !important;
+        font-weight: 500;
+      }
+      .nav-link.active {
+        text-decoration: none ;
+      }
+      .profile-img {
+        width: 240px;
+        height: 240px;
+        object-fit: cover;
+        border: 5px solid #fff;
+        box-shadow: 0 4px 16px rgba(0,0,0,0.08);
+        margin-top: 32px;
+      }
+      .card {
+        border-radius: 18px;
+        border: none;
+        background: #fff;
+        box-shadow: 0 2px 12px rgba(108,52,131,0.08);
+      }
+      .card-title {
+        color: #000000 ;
+        font-weight: 600;
+      }
+      .main-title {
+        color: #000000 ;
+        font-weight: 700;
+        margin-top: 18px;
+      }
+      .desc {
+        color: #444;
+        font-size: 1.1rem;
+      }
+      .card .img-fluid {
+        max-width: 240px;
+        max-height: 240px;
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+        margin: 16px auto;
+        display: block;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container">
+        <a class="navbar-brand" href="#">My Portfolio</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="exp.html">Experience</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Gallery.html">Gallery</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-8 d-flex align-items-center justify-content-center">
+            <div class="row w-100">
+              <div class="col-md-7 d-flex flex-column justify-content-center">
+                <h2 class="main-title">Thanik Sirithon</h2>
+                <p class="desc">Hello, my name is Jeng. I am studying Computer Engineering at Chiang Mai University. </p>
+              </div>
+              <div class="col-md-5 text-center">
+                <img src="./Gallery/S__20045827.jpg" class="rounded-circle profile-img shadow">
+              </div>
+            </div>
+        </div>
+      </div>
+      <br class="my-5">
+      <h2 class="main-title text-center">My Skills</h2>
+              
+        <div class="row justify-content-center mt-4">
+          <div class="card mb-3 w-100">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="./Gallery/programming-languages-1.avif" class="img-fluid rounded-start">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Programming</h5>
+                  <p class="card-text">
+                    I have experience in writing C++ code and am currently learning HTML, CSS and JavaScript coding.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card mb-3 w-100">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="./Gallery/assertiveness.jpg" class="img-fluid rounded-start" alt="Assertiveness">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Assertiveness skill </h5>
+                  <p class="card-text">
+                    I have the courage to present and can speak in front of a large audience.<br>
+                    Confident in expressing opinions and making decisions in group work.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card mb-3 w-100">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="./Gallery/Hardware‐defining-hardware.png" class="img-fluid rounded-start" alt="Hardware">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Hardware </h5>
+                  <p class="card-text">
+                    I can assemble and disassemble computer hardware and do some hardware troubleshooting.<br>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
